tests/fail/invalid_args.stderr
error: expected expression, found `,`
  --> tests/fail/invalid_args.rs:10:1
   |
10 | #[decorate(test_decorator(invalid,))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected expression
   |
   = note: this error originates in the attribute macro `decorate` (in Nightly builds, run with -Z macro-backtrace for more info)
